<resources>
    <string name="app_name">AlbumCantik</string>
    <string name="album_cantik">AlbumCantik</string>
    <string name="izin_akses_gambar">AlbumCantik membutuhkan izin akses gambar</string>
    <string name="draft">Draft AlbumCantik</string>
    <string name="anda_tidak_memiliki_draft_photobook">Anda tidak memiliki draft AlbumCantik</string>
    <string name="anda_tidak_memiliki_order_photobook">Anda tidak memiliki order AlbumCantik</string>
    <string name="pilih_kategori">Kategori AlbumCantik</string>


    <string name="image_desc">image desc</string>
    <string name="title">title</string>
    <string name="page_indikator">1/40</string>
    <string name="batal">Batal</string>
    <string name="upload">Upload</string>
    <string name="pilih_gambar">Pilih Gambar</string>
    <string name="satu">1</string>

    <string name="izinkan">Izinkan</string>
    <string name="tutup">Tutup</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="pilih_aksi_gambar">Pilih aksi untuk mengambil gambar</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="masuk">Masuk</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="daftar_akun">Daftar Akun</string>
    <string name="daftar">Daftar</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="gender">Gender</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="username">Username / nomor hp</string>
    <string name="akun">akun</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eks">X</string>
    <string name="data_diri">Data Diri</string>
    <string name="edit">Edit</string>
    <string name="lihat_profil">Lihat Profil</string>
    <string name="alamat_saya">Alamat Saya</string>
    <string name="riyawat_pesanan">Riyawat Pesanan</string>
    <string name="pengaturan_umum">Pengaturan Umum</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="umum">Umum</string>
    <string name="simpan">SIMPAN</string>
    <string name="akunku">Akun</string>
    <string name="keluar">keluar</string>
    <string name="terjadi_kesalahan">Terjadi Kesalahan, silahkan coba lagi</string>
    <string name="mohon_tunggu">Mohon tunggu</string>
    <string name="tidak_ada_koneksi">Tidak ada koneksi, silahkan coba lagi</string>
    <string name="laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="pilih">Pilih</string>
    <string name="password_beda">Password tidak sama</string>
    <string name="username_kosong">Username tidak boleh kosong</string>
    <string name="email_kosong">Email tidak boleh kosong</string>
    <string name="password_kosong">Password tidak boleh kosong</string>
    <string name="nama_kosong">Nama tidak boleh kosong</string>
    <string name="username_ada_spasi">Username tidak boleh ada spasi</string>
    <string name="username_tidak_benar">Username tidak benar</string>
    <string name="email_tidak_benar">Email tidak benar</string>
    <string name="password_6_karakter">Password harus lebih dari 6 karakter</string>
    <string name="sudah_diambil">Username atau email sudah terdaftar, silahkan coba lagi</string>
    <string name="user_login_tidak_benar">Username atau password tidak benar, silahkan coba lagi</string>
    <string name="yakin_keluar">Yakin ingin keluar?</string>
    <string name="ya">Ya</string>
    <string name="update_berhasil">Update profil berhasil</string>
    <string name="cek_email">Silahkan cek email anda untuk verifikasi</string>
    <string name="register_berhasil">Register Berhasil</string>
    <string name="tidak_dapat_email_verifikasi">Tidak dapat email verifikasi?</string>
    <string name="kirim_lagi">Kirim lagi</string>
    <string name="resend_email_verifikasi">Resend Email Verifikasi</string>
    <string name="submit">Submit</string>
    <string name="email_tidak_terdaftar">Email tidak terdaftar</string>
    <string name="email_dikirim_kembali">Email verifikasi dikirim, silahkan cek kembali</string>
    <string name="password_baru">Password Baru</string>
    <string name="email_reset_dikirim">Email reset password dikirim, silahkan cek email anda</string>
    <string name="reset_password">Reset Password</string>
    <string name="pass_lama">Password Lama</string>
    <string name="coba_lagi">Coba lagi</string>
    <string name="_50">50</string>
    <string name="halaman">Halaman</string>
    <string name="foto">Foto</string>
    <string name="ramadhan_series_photobook">Ramadhan Series Photobook</string>
    <string name="harga">Rp. 150.000</string>
    <string name="kosong">-</string>
    <string name="sedang_upload">Sedang upload foto, mohon tunggu</string>
    <string name="sedang_proses_upload">Sedang proses upload.\nDemi kelancaran diharap untuk tidak menutup halaman ini dan jaga layar anda tetap menyala\n\nPastikan anda memakai koneksi internet tinggi untuk menghindari gagal upload</string>
    <string name="foto_terupload">Foto terupload :</string>
    <string name="upload_gagal">Upload gagal silahkan coba lagi</string>
    <string name="upload_berhasil">Upload berhasil, silahkan isi form order</string>
    <string name="untuk_bisa_upload">Anda belum mengisi semua foto</string>

    <string name="no_telp">No Telp</string>
    <string name="kabupaten">Kabupaten</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="status">Status</string>
    <string name="provinsi">Provinsi</string>
    <string name="tambah_alamat">Tambah Alamat</string>
    <string name="nama">Nama</string>
    <string name="masukan_nama">Masukan Nama</string>
    <string name="masukan_no_telp">Masukan No Telp</string>
    <string name="pilih_provinsi">Pilih Provinsi</string>
    <string name="kota_kabupaten">Kota/Kabupaten</string>
    <string name="pilih_kabupaten">Pilih Kabupaten</string>
    <string name="pilih_kecamatan">Pilih Kecamatan</string>
    <string name="masukan_kode_pos">Masukan Kode Pos</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="hint_alamat">Nama jalan, nomor rumah, RT/RW, dan lainnya</string>
    <string name="jadikan_sebagai_alamat_utama">Jadikan sebagai alamat utama</string>
    <string name="mohon_lengkapi_data_alamat">Mohon lengkapi data alamat</string>
    <string name="hapus_alamat">hapus alamat</string>
    <string name="yakin_upload">Yakin ingin upload?</string>
    <string name="order">Order</string>
    <string name="ganti">Ganti</string>
    <string name="kategori">Kategori</string>
    <string name="minus">-</string>
    <string name="jumlah_order">30</string>
    <string name="plus">+</string>
    <string name="total_harga">Total Harga</string>
    <string name="rp_20_000">Rp. 20.000</string>
    <string name="nama_harga">Harga</string>
    <string name="pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="kirim_order">KIRIM</string>
    <string name="anda_belum_memilih_alamat_utama">Anda belum memilih alamat utama</string>
    <string name="pilih_alamat">pilih alamat</string>

    <string name="mohon_lengkapi">Mohon untuk melengkapi data</string>
    <string name="konfirmasi_pembayaran">konfirmasi pembayaran</string>
    <string name="silahkan_tekan_tombol_konfirmasi">Setelah anda melakukan pembayaran, pihak StoryBook akan memverifikasi pembayaran anda. Silahkan pantau status order di menu daftar order</string>
    <string name="no_rekening">1111 2222 3333 4444</string>
    <string name="atas_nama_rekening">Jepara Print</string>
    <string name="untuk_pembayaran_silahkan_transfer_ke_rekening_di_bawah_ini">Untuk pembayaran, Silahkan transfer ke rekening di bawah ini</string>
    <string name="order_berhasil">Order Berhasil</string>
    <string name="terima_kasih_telah_memesan">Terima kasih telah memesan</string>
    <string name="kembali">Kembali</string>
    <string name="upload_upper">UPLOAD</string>
    <string name="hapus">Hapus</string>
    <string name="yakin_hapus_draft">Yakin ingin hapus draft?</string>
    <string name="kode_order">Kode Order</string>
    <string name="tanggal_order">Tanggal Order</string>
    <string name="status_order">Status Order</string>
    <string name="status_pembayaran">Status Pembayaran</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="batalkan_pesanan">Batalkan Pesanan</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="catatan_order">Catatan Order</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="jumlah_order_title">Jumlah Order</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="lorem_ipsum">ini adalah contoh text di menu utama photobook, berisi informasi tentang photobook itu sendiri</string>

    <string name="harga_kode_unik">Rp. 000.000</string>
    <string name="setelah_melakukan_pembayaran">Setelah melakukan pembayaran silahkan upload bukti transfer</string>
    <string name="untuk_mempercepat_proses_verifikasi">Untuk mempercepat proses verifikasi silahkan mentransfer sesuai dengan jumlah harga yang tertera di bawah ini</string>
    <string name="foto_bukti_transfer">Foto bukti transfer</string>
    <string name="ambil_foto">ambil foto</string>
    <string name="kirim">kirim</string>
    <string name="ambil_foto_lagi">ambil foto lagi</string>
    <string name="anda_tidak_memiliki_alamat">Anda tidak memiliki alamat</string>
    <string name="yakin_batal_pesan">Yakin ingin batalkan pesanan?</string>
    <string name="tidak">Tidak</string>
    <string name="pesanan_berhasil_batal">Pesanan berhasil dibatalkan</string>
    <string name="role">Role</string>

    <string name="gambar_tidak_sesuai">Ukuran gambar belum sesuai ketentuan</string>
    <string name="gambar_harus_1mb">Gambar yang diunggah harus minimal 1 MB</string>
    <string name="yakin_kirim_order">Yakin ingin kirim order?</string>
    <string name="terdeteksi_perubahan">Terdeteksi perubahan foto, silahkan upload terlebih dahulu</string>
    <string name="title_promo">Title Promo</string>
    <string name="desc_promo">Desc Promo</string>
    <string name="order_sekarang">Order Sekarang</string>
    <string name="upload_berhasil_foto_blm_lengkap">Upload berhasil, tetapi anda belum mengisi semua foto, silahkan lengkapi di Draft</string>
    <string name="cara_pembayaran">Cara Pembayaran</string>
    <string name="kode_pembayaran">Kode</string>
    <string name="kode_pembayaran_angka">521</string>
    <string name="harga_belum_termasuk_kode_unik">*harga belum termasuk kode unik</string>
    <string name="order_jumlah_order">Jml Order</string>
    <string name="terima_kasih_telah_melakukan_pemesanan_proses_berikutnya_silahkan_melakukan_pembayaran_melalui_transfer_ke_salah_satu_nomor_rekening_di_bawah_ini">Terima kasih telah melakukan pemesanan, proses berikutnya silahkan melakukan pembayaran melalui transfer ke salah satu nomor rekening di bawah ini</string>
</resources>
