<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@android:color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <ImageView
            android:contentDescription="@string/image_desc"
            android:layout_centerInParent="true"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logosb"/>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/edt_username_login"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="14dp"
        android:background="@drawable/edt_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="textEmailAddress"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"/>

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/edt_password_login"
        android:textSize="14sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="14dp"
        android:background="@drawable/edt_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_masuk"
        android:background="@drawable/accent_round"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/masuk"/>

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tidak_dapat_email_verifikasi"/>

    <TextView
        android:id="@+id/btn_kirim_email"
        android:textStyle="bold"
        android:textColor="@color/redAccent"
        android:padding="8dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kirim_lagi"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/btn_lupa_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lupa_password"
            android:textColor="@color/redAccent"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"/>

        <TextView
            android:id="@+id/btn_daftar_akun"
            android:drawablePadding="8dp"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_akun"
            android:textColor="@color/redAccent"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:gravity="center"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</LinearLayout>