<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DoneOrderActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terima_kasih_telah_melakukan_pemesanan_proses_berikutnya_silahkan_melakukan_pembayaran_melalui_transfer_ke_salah_satu_nomor_rekening_di_bawah_ini"
            android:textAlignment="center"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="32dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_rekening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:layout_width="match_parent"
            android:layout_height="32dp"/>

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/untuk_mempercepat_proses_verifikasi"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

        <TextView
            android:id="@+id/tv_harga_unik"
            android:padding="16dp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/harga_kode_unik"/>

        <TextView
            android:padding="16dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setelah_melakukan_pembayaran"/>

        <Button
            android:id="@+id/btn_konfirmasi_done_order"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/accent_round"
            android:text="@string/konfirmasi_pembayaran"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <TextView
            android:padding="16dp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terima_kasih_telah_memesan"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <TextView
            android:id="@+id/btn_kembali"
            android:textStyle="bold"
            android:textColor="@color/redAccent"
            android:padding="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kembali"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>