<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FormAlamatActivity"
    android:background="@android:color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_tambah_alamat"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"/>

                <EditText
                    android:padding="@dimen/edt_add_alamat"
                    android:id="@+id/edt_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/nothing"
                    android:hint="@string/masukan_nama"
                    android:inputType="textCapWords"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blackTransparent10"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_telp"/>

                <EditText
                    android:padding="@dimen/edt_add_alamat"
                    android:id="@+id/edt_no_telp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/nothing"
                    android:hint="@string/masukan_no_telp"
                    android:inputType="phone"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blackTransparent10"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/provinsi"/>

                <TextView
                    android:padding="@dimen/edt_add_alamat"
                    android:id="@+id/btn_provinsi"
                    android:textAlignment="textEnd"
                    android:drawablePadding="8dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_provinsi"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blackTransparent10"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kota_kabupaten"/>

                <TextView
                    android:padding="@dimen/edt_add_alamat"
                    android:id="@+id/btn_kabupaten"
                    android:textAlignment="textEnd"
                    android:drawablePadding="8dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_kabupaten"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blackTransparent10"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kecamatan"/>

                <TextView
                    android:padding="@dimen/edt_add_alamat"
                    android:id="@+id/btn_kecamatan"
                    android:textAlignment="textEnd"
                    android:drawablePadding="8dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_kecamatan"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blackTransparent10"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kode_pos"/>

                <EditText
                    android:padding="@dimen/edt_add_alamat"
                    android:id="@+id/edt_kode_pos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/nothing"
                    android:hint="@string/masukan_kode_pos"
                    android:inputType="number"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blackTransparent10"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <LinearLayout
                android:padding="8dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat_lengkap"/>

                <EditText
                    android:padding="8dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:id="@+id/edt_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nothing"
                    android:hint="@string/hint_alamat"
                    android:inputType="text"
                    android:textSize="14sp"
                    tools:ignore="Autofill" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blackTransparent10"/>

            <LinearLayout
                android:padding="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/jadikan_sebagai_alamat_utama"/>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:checked="true"
                    android:id="@+id/check_alamat_utama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="32dp"/>

            <TextView
                android:id="@+id/btn_hapus_alamat"
                android:visibility="gone"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hapus_alamat"
                android:textAllCaps="true"
                android:textColor="@color/redAccent"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="32dp"/>

            <Button
                android:id="@+id/btn_simpan_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/accent_round"
                android:text="@string/simpan"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>